# nl2sql

./: .env.example  .gitignore  .replit  ADVANCED_SQL_FEATURES.md  ARCHITECTURE.md  COMPLETE_FEATURES.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_SOLUTION.md  DEPLOYMENT_READY.md  Downloads - Shortcut.lnk  ENHANCEMENTS_SUMMARY.md  FEATURE_TEST_REPORT.md  FINAL_STATUS.md  FINAL_TEST_RESULTS.md  FIXES_APPLIED.md  FIX_WHITE_SCREEN.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_FIX.md  QUICK_START.md  README.md  README_SETUP.md  RUN_APP.md  SQL_FEATURES.md  START_HERE.md  TEST_REPORT.md  WARP.md  WHITE_SCREEN_FIXED.md  advanced_sql.py  app.py  check_setup.ps1  core.py  database.py  pyproject.toml  replit.md  requirements.txt  run_backend.ps1  run_frontend.ps1  sample_customers.csv  sample_orders.csv  (+10 more)
.local/state/replit/agent/filesystem/: filesystem_state.json
.streamlit/: config.toml
attached_assets/: Pasted--STEP-0-Project-Setup-Foundation-What-exists-before-nothing-Goal-Create-the-base-project-st-1762528313701_1762528313702.txt
backend/: auth.py  database.py  main.py  models.py  nl2sql.py  query_runner.py  upload.py
scripts/: dev_smoketest.py
