[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "psycopg2-binary>=2.9.11",
    "sentencepiece>=0.2.1",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "xlrd>=2.0.2",
]
